# ili-scq-pdk

./: .gitignore  README.md  justfile  pyproject.toml
.github/: convert-notebooks.sh
.github/workflows/: pages.yml
docs/: api.rst  conf.py  developing-features.md  docs-publishing.md  docs.just  home.md  index.md  issues.md  materials-and-technology.md  models.md  notebooks.rst  paper-review.md  references.bib
docs/features/: benchmark-cost-analysis.md  gdsfactoryplus-discovery.md  material-db-overlay.md  palace-reporting.md  provider-safe-notebooks.md  surface-q-index-mapping.md
docs/home/: ecosystem-workspace.md  pdk-responsibilities.md
docs/issues/: gplugins-boundary.md  integration-branch-hygiene.md  material-schema-boundary.md  palace-report-ownership.md  provider-acceptance-tests.md  quantum-rf-reference-parity.md
docs/papers/: cpw-resonator-references.md  flip-chip-3d-integration.md  surface-loss-participation.md  transmon-reference-designs.md
ili_scq_pdk/: __init__.py  config.py  helper.py  install_tech.py  logger.py  pdk.py  ports.py  tech.py
ili_scq_pdk/cells/: __init__.py  capacitor.py  cpw.py  resonator.py
ili_scq_pdk/demo/: __init__.py  provider.py
ili_scq_pdk/klayout/: README.md  layers.lyp
ili_scq_pdk/layouts/: __init__.py  provider.py  registry.py
ili_scq_pdk/models/: README.md  __init__.py
ili_scq_pdk/samples/: __init__.py  all_cells.py  provider_safe_usage.py
notebooks/: README.md
notebooks/src/: public_pdk_quickstart.py
tests/: test_layout_providers.py  test_open_pdk.py  test_pdk_architecture.py
